--- a/styles.css
+++ b/styles.css
@@ -111,6 +111,10 @@ figure img{
     flex-basis: 60%;
 }
 
+.about-col-2 p{
+    text-align: justify;
+}
+
 h2{
     font-size: 60px;
     font-weight: 600;
@@ -145,7 +149,9 @@ h2{
     width: 100%;
 }
 
+
 .tab-contents ul li{
+    text-align: justify;
     list-style: none;
     margin: 10px 0;
 }
