--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ body{
 #header{
     width: 100%;
     height: 100vh;
-    background-image: url(assets/2.png);
+    background-image: url(assets/computerMan.png);
     background-size: 50%;
     background-repeat: no-repeat;
     background-position: right;
@@ -233,6 +233,8 @@ h3{
     border-radius: 10px;
     position: relative;
     overflow: hidden;
+    display: flex;
+    align-items: center;
 }
 
 .work img{
@@ -456,6 +458,10 @@ nav .fa-solid{
     }
     .contact-left, .contact-right{
         flex-basis: 100%;
+    }
+
+    .work{
+        height: 488px;
     }
 
     .copyright{
